<resources>
    <string name="app_name">Off the Beaten Path</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="placeholder" translatable="false">PLACEHOLDER</string>
    <string name="placeImage" translatable="false">PlaceImage</string>
    <string name="userImage" translatable="false">user image</string>
    <string name="toastLocation">Unavailable Location</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="name">Name</string>
    <string name="language_settings">Language Settings</string>
    <string name="profile_information">Profile Information</string>
    <string name="change_profile_pic">Change Profile Picture</string>
    <string name="security">Security</string>
    <string name="change_password">Change Password</string>
    <string name="account_management">Account Management</string>
    <string name="delete_account">Delete Account</string>
    <string name="about">About</string>
    <string name="legal">Legal</string>
    <string name="legal_information">Leagal Information</string>
    <string name="log_out">Log Out</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="english_uk" translatable="false">English (UK)</string>
    <string name="hungarian" translatable="false">Magyar</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="app_version_format">Version: %1$s</string>
    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="legal_document">Legal Document</string>
    <string name="password_again">Password Again</string>
    <string name="empty_textfield">Fill in the field!</string>
    <string name="passwords_do_not_match">The passwords do not match!</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="copyright">Copyright</string>
    <string name="place_name">Place Name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="uploaded_by">Uploaded by: %1$s</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="error_fetch_categories" >Error on fetches categories</string>
    <string name="error_fetch_landmarks">Error on fetches landmarks</string>
    <string name="error_save_place">Cannot save place!</string>
    <string name="error_invalid_selection">Invalid select</string>
    <string name="error_select_landmark">Fill the field</string>
    <string name="error_select_category">Fill the field</string>
    <string name="error_place_name_empty">Fill the field</string>
    <string name="add_place">Add place</string>
    <string name="unknown_user">Unknown User</string>
    <string name="invalid_place_id">Invalid Place ID</string>
    <string name="unknown_category">Unknown Category</string>
    <string name="details_not_found">Details not found.</string>
    <string name="failed_to_fetch_details_try_again_later">Failed to fetch details. Try again later.</string>
    <string name="unable_to_connect_check_your_internet_connection">Unable to connect. Check your internet connection.</string>
    <string name="user_not_found">User not found.</string>
    <string name="failed_to_fetch_user_details">Failed to fetch user details.</string>
    <string name="unable_to_connect_to_fetch_user_details">Unable to connect to fetch user details.</string>
    <string name="category_not_found">Category not found.</string>
    <string name="error">Error: %1$s</string>
    <string name="network_error">Network error: %1$s</string>
    <string name="failed_to_fetch_coordinates">Failed to fetch coordinates: %1$s</string>
    <string name="error_fetching_coordinates">Error fetching coordinates: %1$s</string>
    <string name="place_not_found">Place not found</string>
    <string name="failed_to_load_place">Failed to load place: %1$s</string>
    <string name="failed_to_load_places">Failed to load places: %1$s</string>
    <string name="no_description_provided">No description provided.</string>
    <string name="invalid_email_or_password">Invalid email or password!</string>
    <string name="login_failed">Login failed!</string>
    <string name="registration_successful">Registration Successful!</string>
    <string name="failed_to_load_places_please_try_again_later">Failed to load places. Please try again later.</string>
    <string name="no_places_available">No places available.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="landmark">Landmark</string>
    <string name="save_changes">Save Changes</string>
    <string name="save_place">Save Place</string>
    <string name="success_save_place">Place successfully saved</string>
    <string name="place_deleted_successfully">Place deleted successfully!</string>
    <string name="cannot_deleted_the_place">Cannot deleted the place!</string>
    <string name="delete_place">Delete Place</string>
    <string name="are_you_sure_you_want_to_delete_named_place_this_action_cannot_be_undone">Are you sure you want to delete %1$s named place? This action cannot be undone.</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="cancel">Cancel</string>
    <string name="user_id_not_found">User ID not found!</string>
    <string name="profile_updated">Profile updated!</string>
    <string name="failed_to_update_profile">Failed to update profile!</string>
    <string name="are_you_sure_you_want_to_delete_your_account_this_action_cannot_be_undone">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="password_updated_successfully">Password updated successfully!</string>
    <string name="failed_to_update_password">Failed to update password!</string>
    <string name="account_deleted_successfully">Account deleted successfully!</string>
    <string name="failed_to_delete_account">Failed to delete account!</string>
    <string name="try_again">Try again</string>
    <string name="unknown_error">Unknown error</string>
    <string name="filter_places">Filter places</string>
    <string name="filter">Filter</string>
    <string name="failed_to_load_places_general">Failed to load places_general</string>
</resources>