<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/poiName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_name"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="16sp"
        android:paddingTop="8dp"/>

    <TextView
        android:id="@+id/poiDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="14sp"
        android:paddingTop="16dp"/>

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploaded_by"
        android:textSize="14sp"
        android:paddingTop="8dp"/>
</LinearLayout>
