<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LanguageFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_settings"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:lineHeight="28sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_english"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/english_uk"
        app:strokeColor="@color/greenis"
        android:textColor="@color/greenis"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_hungarian"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hungarian"
        app:strokeColor="@color/greenis"
        android:textColor="@color/greenis" />


</LinearLayout>
