<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Base.Theme.OffTheBeatenPath"
    tools:context=".ProfileFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/userImage"
            android:src="@drawable/user"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:id="@+id/userDataLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/userEmailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/profileSwipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profileRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="160dp"
            tools:listitem="@layout/place_list_item"/>

        <TextView
            android:id="@+id/profileNoInternetTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profileTryAgainButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/try_again"
            android:textColor="@color/greenis"
            app:strokeColor="@color/greenis"
            android:visibility="gone"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</FrameLayout>
