<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDBDB0"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideLine" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/darker_brown"
        android:paddingBottom="16dp"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registrationEmailEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/greenis"
        app:cursorColor="@color/greenis"
        app:hintTextColor="@color/greenis"
        app:layout_constraintEnd_toEndOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="@id/logoImageView"
        app:layout_constraintTop_toBottomOf="@id/registrationTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registrationNameEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        app:boxStrokeColor="@color/greenis"
        app:cursorColor="@color/greenis"
        app:hintTextColor="@color/greenis"
        app:layout_constraintEnd_toEndOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="@id/logoImageView"
        app:layout_constraintTop_toBottomOf="@id/registrationEmailEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registrationPasswordEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/greenis"
        app:cursorColor="@color/greenis"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/greenis"
        app:layout_constraintEnd_toEndOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="@id/logoImageView"
        app:layout_constraintTop_toBottomOf="@id/registrationNameEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordAgainEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password_again"
        app:boxStrokeColor="@color/greenis"
        app:cursorColor="@color/greenis"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/greenis"
        app:layout_constraintEnd_toEndOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="@id/logoImageView"
        app:layout_constraintTop_toBottomOf="@id/registrationPasswordEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange"
        android:text="@string/registration"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/registrationPasswordEditText"
        app:layout_constraintStart_toStartOf="@id/registrationPasswordEditText"
        app:layout_constraintTop_toBottomOf="@id/passwordAgainEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>